[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-obfuscation-framework"
version = "1.7.4"
description = "Python Obfuscation Framework"
readme = "README.md"
requires-python = ">=3.5"
license = "GPL-3.0-or-later"
keywords = ["cybersecurity", "obfuscation", "obfuscator", "stager", "payload"]
authors = [{ name = "deoktr", email = "35725720+deoktr@users.noreply.github.com" }]
maintainers = [{ name = "deoktr", email = "35725720+deoktr@users.noreply.github.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.5",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Security",
]
dependencies = [
  "rope>=1.0.0",
  "Pillow>=10.0.0",
  "black>=25.0.0",
]
# dynamic = ["version"]

[project.optional-dependencies]
dev = [
  "ruff==0.14.4",
  "black==25.9.0",
  "pyinstrument",
]
test = [
  "pytest",
  "pytest-cov",
]
build = [
  "build",
  "twine",
  "check-manifest",
]

[project.urls]
"Homepage" = "https://github.com/deoktr/pof"
"Bug Reports" = "https://github.com/deoktr/pof/issues"
"Source" = "https://github.com/deoktr/pof/"

[project.scripts]
pof = "pof.cli:_cli"

[tool.setuptools]
packages = ["pof"]
package-data = { "pof" = ["*.txt"] }

# [tool.setuptools.dynamic]
# version = {attr = "pof.__version__"}

[tool.black]
target-version = ["py313"]
extend-exclude = """
(
  ^/tests/obfuscator/test_names/code/
  | ^/examples/out/
)
"""

[tool.ruff]
fix = true
target-version = "py313"
include = ["*.py"]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "venv",
    "docs",
    "wip/",
    "examples/",
    "hello.py",
    "examples/out/",
]
lint.select = ["ALL"]
lint.ignore = ["ANN", "FIX"]
lint.extend-ignore = ["ERA001", "S311", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "TD001", "TD003"]
lint.isort.known-local-folder = ["pof", "test"]
lint.pydocstyle.convention = "google"
lint.extend-per-file-ignores."pof/cli.py" = ["G004"]
lint.flake8-copyright.author = "deoktr"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
exclude = ["^tests/obfuscator/test_names/code/.*$"]

[tool.pytest.ini_options]
addopts = "-p no:warnings --cov=pof --no-cov-on-fail"
