[project]
name = "python-obfuscation-framework-server"
version = "2.3.0"
description = "Python Obfuscation Framework"
readme = "README.md"
requires-python = ">=3.9"
license = "GPL-3.0-or-later"
keywords = ["cybersecurity", "obfuscation", "obfuscator", "stager", "payload"]
authors = [{ name = "deoktr", email = "35725720+deoktr@users.noreply.github.com" }]
maintainers = [{ name = "deoktr", email = "35725720+deoktr@users.noreply.github.com" }]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
]
dependencies = [
    "flask>=3.1.2",
    "gunicorn[gevent]>=23.0.0",
    "markupsafe>=3.0.3",
    "pygments>=2.19.2",
    "python-obfuscation-framework>=1.8.0",
]

[project.urls]
"Homepage" = "https://github.com/deoktr/pof"
"Bug Reports" = "https://github.com/deoktr/pof/issues"
"Source" = "https://github.com/deoktr/pof/"

[tool.black]
target-version = ["py313"]

[tool.ruff]
fix = true
target-version = "py313"
include = ["*.py"]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "venv",
    "docs",
]
lint.select = ["ALL"]
lint.ignore = ["ANN", "FIX"]
lint.extend-ignore = ["ERA001", "S311", "D100", "D101", "D102", "D103", "D104", "D105", "D106", "D107", "TD001", "TD003"]
lint.isort.known-local-folder = ["pof", "test"]
lint.pydocstyle.convention = "google"
lint.flake8-copyright.author = "deoktr"

[tool.mypy]
ignore_missing_imports = true
show_error_codes = true
